updating some tests to fix and suit the new changes